# GAS

./: .gitignore  GAS_source_catalogues.cat  LICENSE  README.md  REQUIREMENTS  setup.cfg  setup.py
GAS/: CCS_lvls.txt  DR1.py  PropertyMaps.py  __init__.py  baseline.py  catalogs.py  columnDensities.py  config.py  conftest.py  first_look.py  gasBinning.py  gasPipeline.py  gauss_fit.py  gridregion.py  intervals.py  package_data_release.py  plot_regions.py  rebaseline_multi.py  run_first_look.py  run_grid_regions.py  setup_package.py  updatedDataMasking.py  utils.py  voronoi_2d_binning.py
GAS/analysis_binned_regions/: analysis_binned_regions.py
docs/: Update_NH3_mom0.rst  calibration.rst  first_look.rst  imaging.rst  index.rst  property_map.rst
ds9_region_files/: GAS_regions_figures.ipynb  Oph_GAS_box.reg  Perseus_GAS_box.reg  Serpens_GAS_box.reg  Taurus_GAS_box.reg
mapping/: CasaRegrid.py  GAS_first_look.py  GAS_pipeline_wrapper.py  PropertyMaps.py  gasPipeline.py  gridregion.py  otf_gbtmap_grid.pro  otf_gbtmap_weight.pro  otfmap.py  otfmap_c.py  quick_look_maps.py  run_grid_B18.py  run_grid_L1455.py  run_grid_L1688.py  run_grid_NGC1333.py  run_grid_OrionA.py  run_grid_OrionB.py  run_grid_Serpens_Aquila.py  test_imager.py
releases/: DR1.py  README.md
scripts/: ._autopeak_template  ._nod_Moon  ._vegas_kfpa_config  autopeak_Jupiter  autopeak_L1489PPC  autopeak_oriona  autopeak_perseus  autopeak_template  mapTemplate10x10  nodJupiter  nod_3C286  nod_3C48  nod_Moon  oriona_map_10arcmin_square  peak_3C286  peak_3C48  track_L1489PPC  vegas_kfpa_config
(+10 files in other folders)
