[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = GAS
description = GBT Ammonia Survey (GAS) pipeline.
long_description = This is a package for reducing, imaging and generate first look analysis on the GBT Ammonia Survey (GAS) data that relies on astropy.
author = Jaime Pineda, Erik Rosolowsky and Rachel Friesen
author_email = jpineda@mpe.mpg.de
license = MIT
url = https://github.com/jpinedaf/GAS
edit_on_github = False
github_project = jpinedaf/GAS
